--- a/eks-cluster/cluster.yaml
+++ b/eks-cluster/cluster.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: KM Capstone
+  name: KM-Capstone
   region: us-east-1
   version: "1.32"
 
