--- a/eks-cluster/cluster.yaml
+++ b/eks-cluster/cluster.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: KM-Capstone
+  name: km-Capstone
   region: us-east-1
   version: "1.32"
 
@@ -16,12 +16,12 @@ iam:
 
   serviceAccounts:
   - metadata:
-      name: cluster-autoscaler-KM Capstone
+      name: cluster-autoscaler-kmcapstone
       namespace: kube-system
     wellKnownPolicies:
       autoScaler: true
   - metadata:
-      name: aws-load-balancer-controller-KM Capstone
+      name: aws-load-balancer-controller-kmCapstone
       namespace: kube-system
     wellKnownPolicies:
       awsLoadBalancerController: true
