--- a/k8s/db_init_job.yaml
+++ b/k8s/db_init_job.yaml
@@ -4,20 +4,20 @@ metadata:
  name: db-initializer
 spec:
  template:
-spec:
-  containers:
-  - image: EVENTS-JOB-URL-HERE
-    name: db-init-job
-    imagePullPolicy: "Always"
-  env:
-  - name: Capstone-DBHOST
-    value: "database-server-mariadb"
-  - name: DBUSER
-    value: "root"
-  - name: DBPASSWORD
-    valueFrom:
-      secretKeyRef:
-        name: database-server-mariadb
-        key: mariadb-root-password
-  restartPolicy: Never
-backoffLimit: 4
+   spec:
+     containers:
+     - image: EVENTSJOB-URL-HERE
+       name: db-init-job
+       imagePullPolicy: "Always"
+       env:
+       - name: DBHOST
+         value: "database-server-mariadb"
+       - name: DBUSER
+         value: "root"
+       - name: DBPASSWORD
+         valueFrom:
+           secretKeyRef:
+             name: database-server-mariadb
+             key: mariadb-root-password
+     restartPolicy: Never
+ backoffLimit: 4
