--- a/HPA-demo/deployment.yaml
+++ b/HPA-demo/deployment.yaml
@@ -6,17 +6,17 @@ spec:
   selector:
     matchLabels:
       app: autoscale
-      env: training
+      env: capstone
   replicas: 2
   template:
     metadata:
       labels:
         app: autoscale
-        env: training
+        env: capstone
     spec:
       containers:
       - name: nodejs-loop
-        image: coursedemos/nodejs-loop:v1  # image in Dockerhub
+        image: 210700574655.dkr.ecr.us-east-1.amazonaws.com/capstone-eventweb:2.0
         ports:
         - containerPort: 8080
         resources:
